# serializer version: 1
# name: TestGet.test_dev_mode
  dict({
    'dev': True,
    'endpoints': dict({
      'authentication': dict({
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      }),
      'errors': dict({
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      }),
      'indexes': dict({
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      }),
      'samples': dict({
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      }),
    }),
    'first_user': True,
    'version': str,
  })
# ---
# name: TestGet.test_has_users
  dict({
    'dev': False,
    'endpoints': dict({
      'authentication': dict({
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      }),
      'errors': dict({
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      }),
      'indexes': dict({
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      }),
      'samples': dict({
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      }),
    }),
    'first_user': False,
    'version': str,
  })
# ---
# name: TestGet.test_no_users
  dict({
    'dev': False,
    'endpoints': dict({
      'authentication': dict({
        'doc': 'https://www.virtool.ca/docs/api/overview/authentication',
        'url': '/overview/authentication',
      }),
      'errors': dict({
        'doc': 'https://www.virtool.ca/docs/api/overview/errors',
        'url': '/overview/errors',
      }),
      'indexes': dict({
        'doc': 'https://www.virtool.ca/docs/api/indexes',
        'url': '/indexes',
      }),
      'samples': dict({
        'doc': 'https://www.virtool.ca/docs/api/samples',
        'url': '/samples',
      }),
    }),
    'first_user': True,
    'version': str,
  })
# ---
